[project]
name = "when-exactly"
version = "0.0.3"
authors = [
  { name="Nico Bako", email="" },
]
description = "Expressive and intuitive date and time library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nicobako/when-exactly"
Issues = "https://github.com/nicobako/when-exactly/issues"
Documentation = "https://when-exactly.nicobako.me"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=when_exactly --cov-report=term-missing --cov-fail-under=100"
